# midi-vocal-transcription

./: One Key Colab.ipynb  One_Key_Colab.ipynb  README.md  icassp2022_vocal_transcription.ipynb  pyproject.toml  requirements.txt
src/: quantization.py  txt2csv.py  txt2midi.py
